[package]
name = "psbt-v2"
version = "0.2.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/tcharding/rust-psbt/"
description = "Partially Signed Bitcoin Transaction, v0 and v2"
categories = ["cryptography::cryptocurrencies"]
keywords = [ "psbt", "bip-174", "bip174", "bip-370", "bip370"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin-internals/std", "miniscript?/std"]
rand = ["std", "bitcoin/rand-std"]
serde = ["dep:actual-serde", "bitcoin/serde", "bitcoin-internals/serde"]
base64 = ["bitcoin/base64"]
miniscript = ["dep:miniscript", "miniscript?/no-std"]

[dependencies]
bitcoin = { version = "0.32.4", default-features = false }
bitcoin-internals = { version = "0.3.0", features = ["alloc"] }

miniscript = { version = "12.2.0", default-features = false, optional = true }
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
anyhow = "1"
serde_json = "1.0.0"
serde_test = "1.0.19"
serde_derive = "1.0.103"
bincode = "1.3.1"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }

[[example]]
name = "v0"
required-features = ["std"]

[[example]]
name = "v2"
required-features = ["std"]

[[example]]
name = "v2-separate-creator-constructor"
required-features = ["std"]
