[package]
name = "psbt-v2"
version = "0.2.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/tcharding/rust-psbt/"
description = "Partially Signed Bitcoin Transaction, v0 and v2"
categories = ["cryptography::cryptocurrencies"]
keywords = [ "psbt", "bip-174", "bip174", "bip-370", "bip370"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["bitcoin/std", "miniscript?/std"]
rand = ["std", "bitcoin/rand-std"]
serde = ["dep:actual-serde", "bitcoin/serde"]
base64 = ["bitcoin/base64"]
miniscript = ["dep:miniscript", "miniscript?/no-std"]

[dependencies]
bitcoin = { version = "0.32.6", default-features = false }
# Workaround for minimal version resolution bug in bitcoin 0.32.x series.
# bitcoin 0.32.6 depends on hex-conservative 0.2.0, which incorrectly specifies
# arrayvec = "0.7" instead of "0.7.2". Is fixed in hex-conservative 0.2.1.
hex-conservative = { version = "0.2.1", default-features = false }

miniscript = { version = "12.2.0", default-features = false, optional = true }
actual-serde = { package = "serde", version = "1.0.195", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
anyhow = "1.0.86"
serde_json = "1.0.68"

[[example]]
name = "v0"
required-features = ["std", "rand"]

[[example]]
name = "v2"
required-features = ["std"]

[[example]]
name = "v2-separate-creator-constructor"
required-features = ["std"]
